--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 # dependencies
-node_modules
+/node_modules
 
 # distribution
 .parcel-cache
-dist
+/dist
 
 # misc
 .DS_Store
 .env.local
 .env.development
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
